--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,3 @@
-name: Deploy Next.js site to GitHub Pages
-
-on:
-  push:
-    branches: ["main"]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,28 +6,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 20
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'pnpm'
 
-      - name: Install Next.js CLI
-        run: npm install -g next
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8 # Use the pnpm version your project requires
+          cache: true
 
-      - name: Install pnpm globally
-        run: npm install -g pnpm
-
-      - name: Verify pnpm installation
-        run: pnpm --version
-
-      - name: Install dependencies with pnpm
+      - name: Install dependencies
         run: pnpm install
 
       - name: Build and export Next.js app
         run: |
-          next build
-          next export
+          pnpm next build
+          pnpm next export
 
       - name: Upload static site
         uses: actions/upload-pages-artifact@v3
