--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,8 +30,12 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 8 # Use the pnpm version your project requires
+          version: 8
           cache: true
+
+      - name: Create .env file
+        run: |
+          echo "GOOGLE_GENERATIVE_AI_API_KEY=${{ secrets.GOOGLE_GENERATIVE_AI_API_KEY }}" >> .env
 
       - name: Install dependencies
         run: pnpm install
@@ -40,7 +43,7 @@ jobs:
       - name: Build and export Next.js app
         run: |
           pnpm next build
-
+          
       - name: Upload static site
         uses: actions/upload-pages-artifact@v3
         with:
@@ -52,6 +55,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
